--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -114,6 +114,7 @@ a {
   font-weight: normal;
   color: #159957; }
 .main-content p {
+  font-size: 20px;
   margin-bottom: 1em; }
 .main-content code {
   padding: 2px 4px;
